public/css/profile-page.css
.custom-card-container {
    border: 0.001px solid #f4f4f4;
    max-width: 340px;
    margin: 50px auto;
    overflow-y: auto;
    position: relative;
    z-index: 1;
    overflow-x: hidden;
    background-color: white;
    display: flex;
    transition: 0.3s;
    flex-direction: column;
    border-radius: 10px;
    box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
}

.custom-login-card-container {
    border: 0.001px solid #f4f4f4;
    max-width: 340px;
    margin: 50px 120px;
    overflow-y: auto;
    position: relative;
    z-index: 1;
    overflow-x: hidden;
    background-color: white;
    display: flex;
    transition: 0.3s;
    flex-direction: column;
    border-radius: 10px;
    box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
}

.custom-profile-card-container {
    border: 6px solid #f4f4f4;
    max-width: 340px;
    margin: 50px auto;
    overflow-y: auto;
    position: relative;
    z-index: 1;
    overflow-x: hidden;
    background-color: white;
    display: flex;
    transition: 0.3s;
    flex-direction: column;
    border-radius: 10px;
    box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
}

.custom-card-container[data-state="#about"] {
    height: 450px;
}

.custom-card-container[data-state="#about"] .custom-card-main {
    padding-top: 0;
}

.custom-card-container.is-active .custom-card-header {
    height: 80px;
}

.custom-card-container.is-active .custom-card-cover {
    height: 100px;
    top: -50px;
}

.custom-card-container.is-active .custom-card-avatar {
    transform: none;
    left: 20px;
    width: 50px;
    height: 50px;
    bottom: 10px;
}

.custom-card-container.is-active .custom-card-fullname,
.custom-card-container.is-active .custom-card-jobtitle {
    left: 86px;
    transform: none;
}

.custom-card-container.is-active .custom-card-fullname {
    bottom: 18px;
    font-size: 19px;
}

.custom-card-container.is-active .custom-card-jobtitle {
    bottom: 16px;
    letter-spacing: 1px;
    font-size: 10px;
}

.custom-card-header-container {
    display: flex;
    height: 170px;
    flex-shrink: 0;
    width: 100%;
    transition: 0.3s;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.custom-file-upload {
    border: 1px solid #ccc;
    display: inline-block;
    padding: 6px 12px;
    cursor: pointer;
    margin-top: 15px;
    font-size: 14px;
}

.error-message {
    color: red;
    font-size: 12px;
    text-align: center;
    margin: 5px;
}

input[type="file"] {
    display: none;
}

.custom-a {
    text-decoration: none;
}

.custom-card-cover-container {
    width: 100%;
    height: 100%;
    position: absolute;
    top: -20%;
    left: 0;
    will-change: top;
    background-size: cover;
    background-position: center;
    filter: blur(30px);
    transform: scale(1.2);
    transition: 0.5s;
}

.custom-card-avatar-container {
    width: 100px;
    height: 100px;
    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
    border-radius: 50%;
    -o-object-position: center;
    object-position: center;
    -o-object-fit: cover;
    object-fit: cover;
    bottom: 0;
    left: 50%;
}

.custom-card-fullname-container {
    bottom: 0;
    font-size: 22px;
    font-weight: 700;
    text-align: center;
    white-space: nowrap;
    left: 50%;
    margin-top: 10px
}

.custom-card-jobtitle-container {
    position: absolute;
    bottom: 0;
    font-size: 11px;
    white-space: nowrap;
    font-weight: 500;
    opacity: 0.7;
    text-transform: uppercase;
    letter-spacing: 1.5px;
    margin: 0;
    left: 50%;
    transform: translateX(-50%) translateY(-7px);
}

.custom-card-main-container {
    position: relative;
    flex: 1;
    display: flex;
    padding-top: 10px;
    flex-direction: column;
}

.custom-card-content-container {
    padding: 20px;
}

.custom-card-subtitle-container {
    font-weight: 700;
    font-size: 18px;
    margin-bottom: 8px;
    text-align: center;
}

.custom-card-desc-container {
    line-height: 1.6;
    color: #636b6f;
    font-size: 14px;
    margin: 0;
    font-weight: 400;
}

.logout-button {
    background-color: #151D20;
    color: #fff;
    border: none;
    padding: 10px 15px;
    text-decoration: none;
    border-radius: 5px;
    cursor: pointer;
}

.logout-button:hover {
    background-color: #1f2b2e;
}

.logout-invert {
    background-color: #fff;
    color: #151D20;
    border: none;
    padding: 10px 15px;
    text-decoration: none;
    border-radius: 5px;
    cursor: pointer;
    border: 0.5px solid #151D20;
}

.spacer {
    margin-top: 20px;
}

.spacer5 {
    margin-top: 8px;
}

#hiddenUsername {
    display: none;
}

